--- a/Z-daily/线上遇到的问题处理/线上死锁问题排查/死锁排查.md
+++ b/Z-daily/线上遇到的问题处理/线上死锁问题排查/死锁排查.md
@@ -12,6 +12,18 @@ jps -l
 jstack [pid]  > 1.txt 
 ```
 
-#结果：死锁问题展示
+#得到结果：死锁问题展示
 ![avatar](./img/1.png)
+
+
+###线程状态分析
+值得关注的线程状态有：
+① 死锁：Deadlock（重点关注）
+② 执行中：Runnable
+③ 等待资源：Waiting on condition（重点关注）
+④ 等待获取监视器：Waiting on monitor entry（重点关注）
+⑤ 暂停：Suspended
+⑥ 对象等待中：Object.wait() 或 TIMED_WAITING
+⑦ 阻塞：Blocked（重点关注）
+⑧ 停止：Parked
 
