--- a/Z-daily/线上遇到的问题处理/线上日志定位/日志问题定位.MD
+++ b/Z-daily/线上遇到的问题处理/线上日志定位/日志问题定位.MD
@@ -1,3 +1,19 @@
+# word count 命令
+1．命令格式：wc [选项]文件...
+
+2．命令功能：
+    统计指定文件中的字节数、字数、行数，并将统计结果显示输出。该命令统计指定文件中的字节数、字数、行数。如果没有给出文件名，则从标准输入读取。wc同时也给出所指定文件的总统计数。
+
+3．命令参数：
+-c 统计字节数。
+-l 统计行数。
+-m 统计字符数。这个标志不能与 -c 标志一起使用。
+-w 统计字数。一个字被定义为由空白、跳格或换行字符分隔的字符串。
+-L 打印最长行的长度。
+-help 显示帮助信息
+--version 显示版本信息
+
+
 # 查看日志开始多少行
 ```shell script
 head -n 10 [logFileName]   #查询日志文件的头10行日志
@@ -20,14 +36,14 @@ cat -n [logFileName]  #打开文件内容，并显示行号
 tac [logFileName]     #tac是倒序查看，是cat单词反写，tac命令没有-n参数
 ```
 
-#统计当天系统出现ERROR的次数  --color参数表示高亮显示    egrep = grep -E 可以使用基本的正则表达外, 还可以用扩展表达式
+#统计当天系统出现ERROR的次数  --color参数表示高亮显示    egrep命令 = grep -E 可以使用基本的正则表达外, 还可以用扩展表达式
 ```shell script
-egrep ERROR --color [logFileName] | wc -l
+grep ERROR --color [logFileName] | wc -l
 ```
 
 #查看日志中ERROR后10行具体报错  或-C 10查看ERROR前后10行日志
 ```shell script
-egrep -A 10 ERROR [logFileName] | less   
+grep -A 10 ERROR [logFileName] | less   
 ```
 
 #查看指定时间段日志
