--- a/Z-daily/遇到的一些面试题/分布式事务/分布式事务的五种方案.md
+++ b/Z-daily/遇到的一些面试题/分布式事务/分布式事务的五种方案.md
@@ -64,13 +64,13 @@ there is only one consensus protocol, and that’s Paxos” – all other approa
 #3. 本地消息表
 本地消息表其实是国外的 ebay（一个网购平台） 搞出来的这么一套思想。
 这个大概意思是这样的：
-* A 系统在自己本地一个事务里操作同时，插入一条数据到消息表；
-* 接着 A 系统将这个消息发送到 MQ 中去；
-* B 系统接收到消息之后，在一个事务里，往自己本地消息表里插入一条数据，同时执行其他的业务操作，如果这个消息已经被处理过了，那么此时这个事务会回滚，这样保证不会重复处理消息；
-* B 系统执行成功之后，就会更新自己本地消息表的状态以及 A 系统消息表的状态；
-* 如果 B 系统处理失败了，那么就不会更新A的消息表状态，那么此时 A 系统会定时扫描自己的消息表，如果有未处理的消息，会再次发送到 MQ 中去，让 B 再次处理；
-* 这个方案保证了最终一致性，哪怕 B 事务失败了，但是 A 会不断重发消息，直到 B 那边成功为止。
-这个方案说实话最大的问题就在于严重依赖于数据库的消息表来管理事务啥的，会导致如果是高并发场景咋办呢？咋扩展呢？所以一般确实很少用。
+消息表怎么创建呢？这个表应该包括这些字段： id, biz_id, biz_type, msg, msg_result, msg_desc,atime,try_count。
+分别表示uuid，业务id，业务类型，消息内容，消息结果（成功或失败），消息描述，创建时间，重试次数， 其中biz_id，msg_desc字段是可选的。
+具体怎么做呢？消息生产方（也就是发起方），需要额外建一个消息表，并记录消息发送状态。消息表和业务数据要在一个事务里提交，
+也就是说他们要在一个数据库里面。然后消息会经过MQ发送到消息的消费方。如果消息发送失败，会进行重试发送。
+消息消费方（也就是发起方的依赖方），需要处理这个消息，并完成自己的业务逻辑。此时如果本地事务处理成功，表明已经处理成功了，
+如果处理失败，那么就会重试执行。如果是业务上面的失败，可以给生产方发送一个业务补偿消息，通知生产方进行回滚等操作。
+生产方和消费方定时扫描本地消息表，把还没处理完成的消息或者失败的消息再发送一遍。如果有靠谱的自动对账补账逻辑，这种方案还是非常实用的。
 
 #4. 最大努力通知方案
 这个方案的大致意思就是：
