grep查找指定时间段日志

--- a/Z-daily/线上遇到的问题处理/线上日志定位/日志问题定位.MD
+++ b/Z-daily/线上遇到的问题处理/线上日志定位/日志问题定位.MD
@@ -54,6 +54,13 @@ sed -n '/2018-12-06 08:38:00/,$p' [logFileName] | less                #查询指
 ```
 特别说明:上面的两个日期必须是日志中打印出来的日志,否则无效；
         先 grep '2018-12-06 00:00:00' test.log 来确定日志中是否有该时间点
+        
+#grep查看指定时间段日志        
+```shell script
+例如:我要查shop-bussiness.log.2018-11-06文件中2018年11月6号11:34至11点37之间的日志信息,可以这么做;
+
+grep '2018-11-06 11:3[4-7]' shop-bussiness.log.2018-11-06
+```       
 
 
 # 日志很多在屏幕不方便查看 more或者less命令
