--- a/7日年化利率2.5%什么意思.md
+++ b/7日年化利率2.5%什么意思.md
@@ -6,8 +6,14 @@
 
 ###再举个例子：
 假设： 7日年化2.5%
-1万本金的计算方法
+1万本金每天的利息的计算方法:
 
 2.5 / 100 / 365 = 每天的利息
 
 每天的利息 x 10000本金 = 你每天获得多少钱利息 
+
+
+## 无符号数
+无符号数是针对二进制来讲的,无符号数的表数范围是非负数.全部二进制均代表数值,
+没有符号位.即第一个"0"或"1"不表示正负.
+无符号数与有符号数相对C支持所有整形数据类型的有符号数和无符号数运算.尽管C标准并没有指定...
