1.Mysql explain retrospect

--- a/房地产历史回顾.MD
+++ b/房地产历史回顾.MD
@@ -68,3 +68,32 @@
    有十多万人由百万"富翁"一夜之间变成了百万"负翁"。　
 
 　　在地产的大潮中冲浪，靠运气，更要靠实力，所以请准备好才开始。
+
+
+# 1998年开始的中国房地产历史 
+
+开放了商品房市场
+
+城镇公有住房，除市(县)以上人民政府认为不宜出售的外，均可向城镇职工出售。
+
+职工购买公有住房要坚持自愿的原则，新建公有住房和腾空的旧房实行先售后租，并优先出售给住房困难户。
+
+换句话说呢，就是从1998年以后，中国才真正的有了自己的房地产市场。
+
+此外，在1998年央行还颁布了《个人住房贷款管理办法》，在国外呢叫按揭，其实也就是我们平时所说的个贷，正式开始了房地产按揭的金融模式。
+
+但是如果光有房改，没有按揭，中国的房地产市场还是不行的，老百姓还是没有钱买房，必须有银行的按揭给老百姓提供强有力而且稳定的支持，才能够形成中国的房地产市场。
+
+到了21世纪，由于前面两个决定和办法执行了以后，造成了了土地方面的非常紧张的供给。在这种情况下呢，到了2002年，
+
+国土资源部发布了一个新规定《招标拍卖挂牌土地使用权规定》，也就是我们说的招拍挂。
+
+招拍挂取消了原来的划拨或者是协议出让土地，形成了土地的公开市场，如果没有招拍挂，在政府和开发商之间就会有一个灰色地区，
+
+就是协议出让，容易产生很多纠纷，这就显得不公平，就此把土地市场推向了一个公开的市场。
+
+从此中国房地产市场开始了长达15年的快速发展，后面的事情大家就知道了，政府通过卖地提高财政收入来发展城市，
+
+开发商拿到地后建房出售，老百姓一如既往的贷款买房。只是在后来，房子脱离了它本身用来居住的属性，更像是金融产品，炒房也应运而生，
+
+随着房价的不合理飙升，滋生了很多的社会矛盾，普通人辛苦一辈子都买不起一套房。
