二手房交易费用

--- a/二手房费用.MD
+++ b/二手房费用.MD
@@ -1,10 +1,12 @@
+>满五年和满两年是指从房产证下发日期或契税票填发日或原始购房合同填发时间到现在的时间，国家法律法规规定满两年的房子免征营业税;
+
 #增值税或者营业税(5.5%): 
 - 如果房子不满2年，需要缴纳总房价5.5%的营业税，如果满两年不需要缴纳
 
 #个人所得税(以房屋评估价为基准)：
 - 如果房屋不满2年，需要缴纳个人所得税2%
 - 如果房屋满2年，不满5年的房子可以提供房屋原值相关凭证，按照差额20%征收，如果不能提供的按照全额1%征收
-- 如果房屋满5年，并且是卖方唯一住房的，免征个人所得税
+- 如果房屋满5年，并且是卖方唯一住房的，国家免征个人所得税
  
 #契税(以房屋评估价为基准)：
 - 90平方以下，1%的契税
@@ -19,6 +21,8 @@
 
 #中介服务费：
 - 房屋成交总价的1%
+
+>注：二手房的评估价一般为成交额的70%左右，二手房贷款最高额度不能超过房屋评估价的70%
 
 
 购房所需材料：
