--- a/Z-daily/类加载-必须知道.MD
+++ b/Z-daily/类加载-必须知道.MD
@@ -15,11 +15,12 @@ ApplicationClassLoader
 一个类中有静态变量、静态方法、静态代码块、成员变量、成员方法、非静态代码块、构造器，那么他们执行的顺序是什么呢？
 如果该类继承了父类，那么执行顺序又是什么样的呢？
 正常情况下：
-超类的静态变量和代码块 --> 父类的静态变量和代码块 --> 子类的静态变量和代码块 
---> 超类的非静态变量和代码块 --> 超类的构造器 
---> 父类的非静态变量和代码块 --> 父类的构造器 
---> 子类的非静态变量和代码块 --> 子类的构造器
 ————————————————
+父类的静态字段 ——> 父类静态代码块 ——> 子类静态字段 ——> 子类静态代码块
+——> 父类成员变量(非静态字段) ——> 父类非静态代码块 ——> 父类构造器
+——> 子类成员变量(非静态字段) ——> 子类非静态代码块 ——> 子类构造器
+————————————————
+
 
 
 
