1.表连接查询

--- a/Z-daily/sql/表连接查询.MD
+++ b/Z-daily/sql/表连接查询.MD
@@ -4,3 +4,6 @@ ON a.id= b.id AND a.type = 10  ======就是相当于======  ON (a.id = b.id AND 
 
 # left join on 后跟 where 条件查询
 使用where进行条件查询时,where 是对前面on的sql所查询出的表 再进行条件的筛选,
+
+#查询书名中，平均价格大于20的
+select * from book a GROUP BY a.book_name HAVING avg(book_price)>20
