1.String是引用传递 但是不能改变原值  因为String不可变

--- a/Z-daily/sql/表连接查询.MD
+++ b/Z-daily/sql/表连接查询.MD
@@ -7,3 +7,24 @@ ON a.id= b.id AND a.type = 10  ======就是相当于======  ON (a.id = b.id AND 
 
 #查询书名中，平均价格大于20的
 select * from book a GROUP BY a.book_name HAVING avg(book_price)>20
+
+
+###group by 和 distinct 的区别， 二者都可以去重复，但是还是区别的
+说到分组和去重大家率先想到的肯定是group by和distinct,
+
+distinct简单来说就是用来去重的，而group by的设计目的则是用来聚合统计的，
+两者在能够实现的功能上有些相同之处，但应该仔细区分，因为用错场景的话，效率相差可以倍计。
+
+单纯的去重操作使用distinct，速度是快于group by的。
+
+distinct支持单列、多列的去重方式。 
+单列去重的方式简明易懂，即相同值只保留1个。 
+多列的去重则是根据指定的去重的列信息来进行，即只有所有指定的列信息都相同，才会被认为是重复的信息。
+
+group by使用的频率相对较高，但正如其功能一样，它的目的是用来进行聚合统计的，虽然也可能实现去重的功能，但这并不是它的长项。
+
+select 要使用字段1,要使用字段2 from 表名 where id in (select min(id) from 表名 group by 不重复字段名)
+
+例：
+    select byid,id from bbs where id in (select min(id) from bbs group by byid)
+    或者select byid,min(id) from bbs  group by byid
