--- a/Z-daily/sql面试题/表连接查询.MD
+++ b/Z-daily/sql面试题/表连接查询.MD
@@ -1,17 +1,17 @@
 # left join on 后跟 and 条件查询
-ON a.id= b.id AND a.type = 10  ======就是相当于======  ON (a.id = b.id AND a.type = 10 )
+ON a.id = b.id AND a.type = 10  ======就是相当于======  ON (a.id = b.id AND a.type = 10 )
 
 
 # left join on 后跟 where 条件查询
 使用where进行条件查询时,where 是对前面on的sql所查询出的表 再进行条件的筛选,
 
-#查询书名中，平均价格大于20的
-select * from book a GROUP BY a.book_name HAVING avg(book_price)>20
+
+# 查询书名中,平均价格大于20的 [having是对分组之后的组数据进行筛选]
+select * from book a GROUP BY a.book_name HAVING avg(book_price) > 20
 
 
-###group by 和 distinct 的区别， 二者都可以去重复，但是还是区别的
+# group by 和 distinct 的区别，二者都可以去重复，但是还是区别的
 说到分组和去重大家率先想到的肯定是group by和distinct,
-
 distinct简单来说就是用来去重的，而group by的设计目的则是用来聚合统计的，
 两者在能够实现的功能上有些相同之处，但应该仔细区分，因为用错场景的话，效率相差可以倍计。
 
@@ -26,5 +26,5 @@ group by使用的频率相对较高，但正如其功能一样，它的目的是
 select 要使用字段1,要使用字段2 from 表名 where id in (select min(id) from 表名 group by 不重复字段名)
 
 例：
-    select byid,id from bbs where id in (select min(id) from bbs group by byid)
-    或者select byid,min(id) from bbs  group by byid
+ select byid,id from bbs where id in (select min(id) from bbs group by byid)
+ 或者select byid,min(id) from bbs  group by byid
