--- a/java-8/misc(杂项)/虚方法和非虚方法.md
+++ b/java-8/misc(杂项)/虚方法和非虚方法.md
@@ -5,3 +5,9 @@
 其它方法称为虚方法；
 
 子类对象的多态性的使用前提：1.类的继承关系 2.方法的重写
+
+```
+java中没有明确说明什么是虚方法；
+虚方法是C++来的
+java虚方法你可以理解为java里所有被overriding的方法都是virtual的,所有重写的方法都是override的
+```
