--- a/Z-daily/类加载-必须知道.MD
+++ b/Z-daily/类加载-必须知道.MD
@@ -29,8 +29,11 @@ ApplicationClassLoader
 
 
 ##JAVA创建对象的四种方式：
-有4种显式地创建对象的方式：
-1.用new语句创建对象，这是最常用的创建对象的方式。
+有4种显式地创建对象的方式：  
+```
+1.用new语句创建对象，这是最常用的创建对象的方式。  
 2.运用反射手段，调用Java.lang.Class或者java.lang.reflect.Constructor类的newInstance()实例方法。
 3.调用对象的clone()方法。
-4.运用反序列化手段，调用java.io.ObjectInputStream对象的readObject()方法.              
+4.运用反序列化手段，调用java.io.ObjectInputStream对象的readObject()方法.     
+5.使用例如ASM字节码框架         
+```
