--- a/Z-daily/抽象类为什么不能实例化.MD
+++ b/Z-daily/抽象类为什么不能实例化.MD
@@ -1,6 +1,7 @@
 今天无意中看到一个问题：    
 为什么抽象类不能实例化？    
-很多人的答案都是再说使用抽象类的好处，但是并没有回答为什么不能实例化？这个过程就像是在回答：为什么公鸡不能下蛋？然后回答是使用公鸡可以打鸣。
+很多人的答案都是再说使用抽象类的好处，但是并没有回答为什么不能实例化？  
+这个过程就像是在回答：为什么公鸡不能下蛋？然后回答是使用公鸡可以打鸣。
 
 答案是: 规定。
 为什么我这么理解，原因有以下几点。
