--- a/Z-daily/遇到的一些问题/分布式事务/分布式事务的五种方案.md
+++ b/Z-daily/遇到的一些问题/分布式事务/分布式事务的五种方案.md
@@ -1,4 +1,8 @@
+#世上只有一种一致性算法，那就是Paxos，所有其他一致性算法都是Paxos算法的不完整版。
+
+
 #1. XA方案（2PC-两阶段提交）
+```
 1.[请求阶段（commit-request phase，或称表决阶段，voting phase）]
 在请求阶段，协调者将通知事务参与者准备提交或取消事务，然后进入表决过程。
 在表决过程中，参与者将告知协调者自己的决策：同意（事务参与者本地作业执行成功）或取消（本地作业执行故障）。
@@ -6,7 +10,9 @@
 在该阶段，协调者将基于第一个阶段的投票结果进行决策：提交或取消。
 当且仅当所有的参与者同意提交事务协调者才通知所有的参与者提交事务，否则协调者将通知所有的参与者取消事务。
 参与者在接收到协调者发来的消息后将执行响应的操作。
+```
 
+```
 >两阶段提交的缺点
 - 1.同步阻塞问题。执行过程中，所有参与节点都是事务阻塞型的。
     当参与者占有公共资源时，其他第三方节点访问公共资源不得不处于阻塞状态。
@@ -22,8 +28,10 @@
 - 当协调者出错，同时参与者也出错时，两阶段无法保证事务执行的完整性。
 考虑协调者再发出commit消息之后宕机，而唯一接收到这条消息的参与者同时也宕机了。
 那么即使协调者通过选举协议产生了新的协调者，这条事务的状态也是不确定的，没人知道事务是否被已经提交。
+```
 
 #2. TCC方案(3PC-三阶段提交)
+```
 3PC把2PC的准备阶段再次一分为二，这样三阶段提交就有CanCommit、PreCommit、DoCommit三个阶段。
 [CanCommit阶段]
 3PC的CanCommit阶段其实和2PC的准备阶段很像。协调者向参与者发送commit请求，参与者如果可以提交就返回Yes响应，否则返回No响应。
@@ -60,8 +68,10 @@
 Google Chubby的作者Mike Burrows说过， 
 there is only one consensus protocol, and that’s Paxos” – all other approaches are just broken versions of Paxos. 
 意即世上只有一种一致性算法，那就是Paxos，所有其他一致性算法都是Paxos算法的不完整版。
+```
 
 #3. 本地消息表
+```
 本地消息表其实是国外的 ebay（一个网购平台） 搞出来的这么一套思想。
 这个大概意思是这样的：
 消息表怎么创建呢？这个表应该包括这些字段： id, biz_id, biz_type, msg, msg_result, msg_desc,atime,try_count。
@@ -71,14 +81,18 @@ there is only one consensus protocol, and that’s Paxos” – all other approa
 消息消费方（也就是发起方的依赖方），需要处理这个消息，并完成自己的业务逻辑。此时如果本地事务处理成功，表明已经处理成功了，
 如果处理失败，那么就会重试执行。如果是业务上面的失败，可以给生产方发送一个业务补偿消息，通知生产方进行回滚等操作。
 生产方和消费方定时扫描本地消息表，把还没处理完成的消息或者失败的消息再发送一遍。如果有靠谱的自动对账补账逻辑，这种方案还是非常实用的。
+```
 
 #4. 最大努力通知方案
+```
 这个方案的大致意思就是：
 * 系统 A 本地事务执行完之后，发送个消息到 MQ；
 * 这里会有个专门消费 MQ 的最大努力通知服务，这个服务会消费 MQ 然后写入数据库中记录下来，或者是放入个内存队列也可以，接着调用系统 B 的接口；
 * 要是系统 B 执行成功就 ok 了；要是系统 B 执行失败了，那么最大努力通知服务就定时尝试重新调用系统 B，反复 N 次，最后还是不行就放弃。
+```
 
 #5. 最终一致性方案(国内互联网公司大部分用的)
+```
 直接基于 MQ 来实现事务。比如阿里的 RocketMQ 就支持消息事务
 大概的意思就是：
 * A 系统先发送一个 prepared 消息到 mq，如果这个 prepared 消息发送失败那么就直接取消操作别执行了；
@@ -88,3 +102,4 @@ there is only one consensus protocol, and that’s Paxos” – all other approa
 一般来说这里你就可以查下数据库看之前本地事务是否执行，如果回滚了，那么这里也回滚吧。这个就是避免可能本地事务执行成功了，而确认消息却发送失败了。
 * 这个方案里，要是系统 B 的事务失败了咋办？重试咯，自动不断重试直到成功，如果实在是不行，要么就是针对重要的资金类业务进行回滚，
 比如 B 系统本地回滚后，想办法通知系统 A 也回滚；或者是发送报警由人工来手工回滚和补偿。
+```
