1.mybatis-plus shardingsphere分表分库使用默认的雪花算法

--- a/Z-daily/事务的嵌套和挂起.MD
+++ b/Z-daily/事务的嵌套和挂起.MD
@@ -3,6 +3,8 @@
 - REQUIRED_NEW的特性:  
   [①实现对应的是一个新的事务,申请的是一个新的数据库连接,所以外层事务回滚时,不影响内层事务; ②如果内层事务出现异常,外层事务也会回滚]
 
+总结：
+>NESTED事务跟REQUIRED事务区别就在这里，NESTED事务是回滚到回滚点，而回滚点生成是在进入内嵌事务的时候，外面事务是不会回滚的 
 
 
 事务的传播特性是怎么回事呢？
