--- a/Z-daily/橙域工作问题/记一次橙域-数据库主键达到上限产生的问题.md
+++ b/Z-daily/橙域工作问题/记一次橙域-数据库主键达到上限产生的问题.md
@@ -7,8 +7,7 @@ values ('1.com','3xx','6','2021-04-28 06:25:00','aa'),
 ON DUPLICATE KEY UPDATE status=VALUES(status), request=VALUES(request), record_time=VALUES(record_time), provider=VALUES(provider)
 ]; 
 nested exception is com.mysql.cj.jdbc.exceptions.MySQLTransactionRollbackException: 
-Lock wait timeout exceeded; 
-try restarting transaction;
+Lock wait timeout exceeded; try restarting transaction;
 
 	at org.springframework.jdbc.support.SQLErrorCodeSQLExceptionTranslator.doTranslate(SQLErrorCodeSQLExceptionTranslator.java:262)
 	at org.springframework.jdbc.support.AbstractFallbackSQLExceptionTranslator.translate(AbstractFallbackSQLExceptionTranslator.       java:72)
