事务的嵌套和挂起

--- a/Z-daily/事务的嵌套和挂起.MD
+++ b/Z-daily/事务的嵌套和挂起.MD
@@ -15,7 +15,7 @@
 ```
 如果是REQUIRED_NEW这种情况，所谓的挂起当前事务，开启新的事务，
 是Spring又去申请了一个新的Connection，这样就对应到一个新的事务上，
-然后将这个连接绑定到当前线程，再继续执行
+然后将这个连接绑定到当前线程，再继续执行。
 ```
 
 >对于嵌套事务，底层则是通过数据库的SAVEPOINT来实现所谓的[子事务]
