unique index 也遵循最左原则

--- a/Z-daily/mysql调查死锁/事务状态查询.md
+++ b/Z-daily/mysql调查死锁/事务状态查询.md
@@ -20,7 +20,7 @@ innodb_lock_wait_timeout=500
 注意：
 information_schema数据库中的innodb_locks表，
 information_schema数据库中的innodb_locks_waits表，
-在8.0.13版本中由
+[在8.0.13版本中由]
 performance_schema数据库中的data_locks表，
 performance_schema数据库中的data_locks_waits表
 代替!
