--- a/Z-daily/mysql调查死锁/(5.7版本)死锁演示.md
+++ b/Z-daily/mysql调查死锁/(5.7版本)死锁演示.md
@@ -1,6 +1,8 @@
 问题背景：Deadlock found when trying to get lock; try restarting transaction
 
-# 重现过程：
+#注意：只有Mysql5.7可以重现此问题
+
+# 创建数据库deadlock,然后重现过程：
 ```sql
 create table t
 (
@@ -27,7 +29,7 @@ values (10, 11, 12, 13),
 ```
 
 
-用Navicat工具，打开AB两个窗口，
+用Navicat工具，打开ABC两个窗口，
 
 #会话1：
 ```sql
@@ -55,13 +57,11 @@ insert into t values(70,34,72,73) on duplicate key update c2=34;
 
 可以看到最新的1条死锁信息，就是我们刚刚产生的死锁
 
-#我们切换到会话3
+#我们切换到会话3，查看锁状态
 ```sql
 show engine innodb status;
 ```
 ![avatar](img/死锁2.png)
-
-
 
 
 
