--- a/Z-daily/mysql调查死锁/调查最近一次死锁日志.MD
+++ b/Z-daily/mysql调查死锁/调查最近一次死锁日志.MD
@@ -1,10 +1,14 @@
-
 ```sql
 SHOW ENGINE INNODB STATUS;
 ```
 
+知识点：lock_mode X 是什么意思？
+![avatar](img/lock_mode-X就是next-key锁.png)
 
-当有3个（或以上）事务对相同的表进行insert操作，如果insert对应的字段上有uniq key约束并且第一个事务rollback了，那其中一个将返回死锁错误信息。
+三种锁名词解释：
+间隙锁（lock_model X locks gap before rec）
+插入意向锁（lock_mode X locks gap before rec insert intention waiting）
+插入记录之后的记录锁（lock_mode X locks rec but not gap） 
 
 
 =====================================
@@ -58,7 +62,8 @@ insert into `t_log_stratified_flow` (record_time,band_width,flow,domain,provider
 [这行信息表示第一个事务正在等待锁被授予]
 
 RECORD LOCKS space id 1422 page no 92567 n bits 288 index time_domain of table `logscheduler`.`t_log_stratified_flow` trx id 123045553 lock_mode X locks gap before rec insert intention waiting
-[这行信息表示等待的锁是一个record lock，空间id是1422，页编号为92567，大概位置在页的288位处，锁发生在表`logscheduler`.`t_log_stratified_flow`的索引`time_domain`上，trx id 123045553 lock_mode X在记录插入意向锁，等待之前间隙锁] 
+[这行信息表示等待的锁是一个record lock，空间id是1422，页编号为92567，大概位置在页的288位处，锁发生在表`logscheduler`.`t_log_stratified_flow`的索引`time_domain`上] 
+
 
 Record lock, heap no 116 PHYSICAL RECORD: n_fields 5; compact format; info bits 0
 [这行表示record lock的heap no 位置]
