--- a/Z-daily/mysql调查死锁/调查最近一次死锁日志.MD
+++ b/Z-daily/mysql调查死锁/调查最近一次死锁日志.MD
@@ -2,7 +2,14 @@
 SHOW ENGINE INNODB STATUS;
 ```
 
-知识点：lock_mode X 是什么意思？
+```Mysql按照锁的种类：主要有四种锁算法(也叫锁机制)
+1. Record锁：这种锁会在索引上加锁，比如sql为select column_1 from table where column_1=1 for update，且column_1上有索引，则会把colunm_1为1的行都加排它锁，其他事务禁止对此行读和写。
+2. Gap锁（间隙锁）：这种锁作用在索引记录之间。目的只需要记住：他是为防止其他事务插入间隙（包括防止insert方式插入新数据到间隙，以及update方式将其他行变更到此间隙）。Gap锁可以有效的防止”幻读“（因为这些间隙都被上了锁，其他事务不可能再插入数据到这些间隙中，于是当前事务在连续进行”当前读“时，每次读到的都是相同的记录）。虽然Gap锁只作用在隔离级别为RR及以上的数据库上，但是不意味着隔离等级为RC级别的不会使用，在RC级别，在进行外键约束检测和唯一键约束检测的时候，会使用到Gap锁，而正是这个duplicate-key checking导致了上文出现的死锁发生。关于Gap锁到底是如何加锁的，可以参阅这篇文章[https://www.cnblogs.com/crazylqy/p/7821481.html?spm=a2c6h.12873639.0.0.47a21bf4dumfON]。
+3. Next-Key锁：本质上就是Gap锁和Record锁的结合，锁住索引外还要锁住索引的间隙。再具体一些就是，一个record锁，加上，位于此索引记录前的第一个间隙处的间隙锁。举个简单的例子就是，如果现在有一个索引包含三个值1，3，5，则next-key lock锁，可能锁住的范围就有(-∞,1],(1,3],(3,5],(5,+∞]。同样在next-key lock一般作用在RR隔离等级的数据库，但是当出现在insert时候，检测到唯一键冲突的时候，会在冲突所在唯一索引出和之前的间隙处加Next-key lock.
+4. Insert Intention锁（插入意向锁）：顾名思义，这个锁是在数据插入之前会加此锁。它是一种轻量的Gap锁，同事也是意向排他锁的一种。它的存在使得多个事务在写入不同数据到统一索引间隙的时候，不会发生锁等待。另外由于它是一种意向插入锁，所以当排他锁已经处于间隙上的时候，根据锁的兼容矩阵，可以知道，意向插入锁必须等待此间隙上的排它锁释放，才能获取。
+```
+
+知识点：下面日志中lock_mode X 是什么意思？ lock_mode X(Next-key lock)
 ![avatar](img/lock_mode-X就是next-key锁.png)
 
 三种锁名词解释：
