--- a/Z-daily/mysql调查死锁/调查最近一次死锁日志.MD
+++ b/Z-daily/mysql调查死锁/调查最近一次死锁日志.MD
@@ -1,5 +1,8 @@
+查看锁等待情况：
 ```sql
-SHOW ENGINE INNODB STATUS;
+select * from information_schema.innodb_trx where trx_state="lock wait";
+-- 或
+show engine innodb status;
 ```
 
 ```Mysql按照锁的种类：主要有四种锁算法(也叫锁机制)
