mysql可以打开锁统计，通过以下语句打开mysql的锁的统计； 该类监控机制默认是关闭状态，分析问题需要查看监控日志时再开启。 建议分析问题后，将监控关闭；否则，每15秒输出一次INNODB运行状态信息到错误日志，会使用日志变得特别大。 ```sql set GLOBAL innodb_status_output_locks=ON; set GLOBAL innodb_status_output=ON; ```

--- a/Z-daily/mysql调查死锁/死锁演示.md
+++ b/Z-daily/mysql调查死锁/死锁演示.md
@@ -1,3 +1,12 @@
+mysql可以打开锁统计，通过以下语句打开mysql的锁的统计；
+该类监控机制默认是关闭状态，分析问题需要查看监控日志时再开启。
+建议分析问题后，将监控关闭；否则，每15秒输出一次INNODB运行状态信息到错误日志，会使用日志变得特别大。
+```sql
+set GLOBAL innodb_status_output_locks=ON;
+set GLOBAL innodb_status_output=ON;
+```
+
+
 问题背景：Deadlock found when trying to get lock; try restarting transaction
 
 # 创建数据库deadlock,然后重现过程：
