--- a/Z-daily/mysql调查死锁/调查最近一次死锁日志.MD
+++ b/Z-daily/mysql调查死锁/调查最近一次死锁日志.MD
@@ -1,9 +1,19 @@
+mysql可以打开锁统计，通过以下语句打开mysql的锁的统计；
+该类监控机制默认是关闭状态，分析问题需要查看监控日志时再开启。
+建议分析问题后，将监控关闭；否则，每15秒输出一次INNODB运行状态信息到错误日志，会使用日志变得特别大。
+```sql
+set GLOBAL innodb_status_output_locks=ON;
+set GLOBAL innodb_status_output=ON;
+```
+
 查看锁等待情况：
 ```sql
-select * from information_schema.innodb_trx where trx_state="lock wait";
+select * from information_schema.innodb_trx;
 -- 或
 show engine innodb status;
 ```
+
+
 
 ```Mysql按照锁的种类：主要有四种锁算法(也叫锁机制)
 1. Record锁：这种锁会在索引上加锁，比如sql为select column_1 from table where column_1=1 for update，且column_1上有索引，则会把colunm_1为1的行都加排它锁，其他事务禁止对此行读和写。
