--- a/Z-daily/mysql调查死锁/事务状态查询.md
+++ b/Z-daily/mysql调查死锁/事务状态查询.md
@@ -1,21 +1,3 @@
-1. 运行以下命令，查找提交事务的数据，杀掉线程即可解决
-```
-select * from information_schema.innodb_trx;
- 
-事务状态(trx_state)：正常情况下都是RUNNING，在被锁之后就是LOCK_WAIT；
-
- 
-正常情况下的状态都是RUNNING,但是在被锁之后就会变成LOCK WAIT ,一旦出现这种情况,就得杀死这个进程，事务的进程ID(trx_mysql_thread_id),如果进程杀不死就只能重启Mysql服务了
-kill trx_mysql_thread_id;
-```
-2. 增加锁等待时间，即增大下面配置项参数值，单位为秒（s）
-```
-innodb_lock_wait_timeout=500
-```    
-3. 优化存储过程,事务避免过长时间的等待。
-
-
-
 [
 注意：
 information_schema数据库中的innodb_locks表，
@@ -26,13 +8,9 @@ performance_schema数据库中的data_locks_waits表
 代替!
 ]
 
-可以用下面三张表来查原因-information_schema：
-《select * from information_schema.》
-innodb_trx          ## 当前运行的所有事务
-innodb_locks        ## 当前出现的锁
-innodb_lock_waits   ## 锁等待的对应关系
 
 
+# 查看Mysql锁信息
 1.确定是否锁表
 select * from information_schema.innodb_locks;
 2.查询正在锁的事务
@@ -43,11 +21,11 @@ select * from information_schema.innodb_lock_waits;
 select * from information_schema.innodb_trx;
 5.查询所有的线程
 select * from information_schema.PROCESSLIST;
-————————————————
 
 
 
-root@127.0.0.1  : information_schema 13:28:38> desc innodb_locks;
+
+# information_schema.innodb_locks表(当前出现的锁)
 +-------------+---------------------+------+-----+---------+-------+
 | lock_id      #锁ID
 | lock_trx_id  #拥有锁的事务ID
@@ -62,7 +40,7 @@ root@127.0.0.1  : information_schema 13:28:38> desc innodb_locks;
 +-------------+---------------------+------+-----+---------+-------+
 
 
-root@127.0.0.1  : information_schema 13:28:56> desc innodb_lock_waits;
+# information_schema.innodb_lock_waits表(锁等待的对应关系)
 +-------------------+-------------+------+-----+---------+-------+
 | requesting_trx_id  #请求锁的事务ID
 | requested_lock_id  #请求锁的锁ID
@@ -71,7 +49,9 @@ root@127.0.0.1  : information_schema 13:28:56> desc innodb_lock_waits;
 +-------------------+-------------+------+-----+---------+-------+
 
 
-root@127.0.0.1  : information_schema 13:29:05> desc innodb_trx ;
+# information_schema.innodb_trx表(当前运行的所有事务)
+- 事务状态(trx_state)：正常情况下都是RUNNING，在被锁之后就是LOCK_WAIT；一旦出现这种情况,就得杀死这个进程，事务的进程ID(trx_mysql_thread_id),如果进程杀不死就只能重启Mysql服务了。
+- kill trx_mysql_thread_id;
 +----------------------------+---------------------+------+-----+---------------------+-------+
 | trx_id                       #事务ID
 | trx_state                    #事务状态：
@@ -101,12 +81,9 @@ root@127.0.0.1  : information_schema 13:29:05> desc innodb_trx ;
 
 
 
+注意<设置锁等待时间>：
+```sql
+set innodb_lock_wait_timeout=1500; --只影响当前Session。
+set global innodb_lock_wait_timeout=1500; --作为全局的修改方式，只会影响修改之后打开的Session，而不能改变当前Session。
+```
 
-题外话：
-```
-关于set innodb_lock_wait_timeout=1500; 
-和 set global innodb_lock_wait_timeout=1500; 的区别。
-前者等价于set session只影响当前session，
-后者作为全局的修改方式，只会影响修改之后打开的session；
-注意后者不能改变当前session；
-```
