--- a/Z-daily/mysql调查死锁/死锁演示1.md
+++ b/Z-daily/mysql调查死锁/死锁演示1.md
@@ -6,6 +6,22 @@ set GLOBAL innodb_status_output_locks=ON;
 set GLOBAL innodb_status_output=ON;
 ```
 
+```
+MySQL的锁系统：shared lock和exclusive lock(共享锁和排他锁，也叫读锁和写锁，即read lock和write lock)
+
+共享锁【S锁】
+又称读锁，若事务T对数据对象A加上S锁，则事务T可以读A但不能修改A，其他事务只能再对A加S锁，而不能加X锁，直到T释放A上的S锁。
+这保证了其他事务可以读A，但在T释放A上的S锁之前不能对A做任何修改。
+
+排他锁【X锁】
+又称写锁。若事务T对数据对象A加上X锁，事务T可以读A也可以修改A，其他事务不能再对A加任何锁，直到T释放A上的锁。
+这保证了其他事务在T释放A上的锁之前不能再读取和修改A。
+```
+
+
+
+
+
 
 问题背景：Deadlock found when trying to get lock; try restarting transaction
 
@@ -50,7 +66,7 @@ start transaction;
 insert into t values(60,35,62,63) on duplicate key update c2=35;
 ```
 
-#这个时候会话2阻塞了，我们可以查看一下锁信息，另外开启一个会话3：
+#此时会话2阻塞了，我们可以查看一下锁信息，另外开启一个会话3：
 ```sql
 show engine innodb status;
 ```
